# cmdout

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  appveyor.yml
.github/workflows/: cmake-multi-platform.yml  test.yml
benchmarks/: CMakeLists.txt  benchmarks.cpp
benchmarks/cmake/: benchmark.cmake
benchmarks/src/: benchmarks.cpp
cmake/: CPackOptions.cmake.in  FindSphinx.cmake  cmdout.pc.in  cmdoutCPack.cmake  cmdoutConfig.cmake.in  utils.cmake  version.rc.in
cmdout/: CMakeLists.txt
cmdout/cmake/: cmdoutCPack.cmake
cmdout/include/: cmdout.hpp
cmdout/include/cmdout/: cmdout.hpp  cmdout_ext.hpp  version.h
cmdout/src/: cmdout.cpp  system.cpp
demo/: CMakeLists.txt
demo/src/: main.cpp
docs/: Doxyfile.in  _config.yml  community_created_documentation.md  conf.py  examples.md  faq.md  index.md  platforms.md  primer.md  quickstart-cmake.md  requirements.txt  samples.md
docs/_data/: navigation.yml
docs/_layouts/: default.html
docs/_sass/: main.scss
docs/reference/: executing.md
examples/: CMakeLists.txt  example_myvas_cmdout.cpp  example_myvas_system.cpp  example_std_system.cpp
examples/src/: example_myvas_cmdout.cpp  example_myvas_system.cpp  example_std_system.cpp  example_std_system_out.cpp
include/cmdout/: cmdout.h  cmdout.hpp  cmdout_ext.h  cmdout_ext.hpp  version.h
include/cmdout/experimental/: std_system_out.h  std_system_out.hpp
src/: cmdout.cpp  cmdout_ext.cpp  system.cpp
src/experimental/: std_system_out.cpp
tests/: CMakeLists.txt  test_myvas_cmdout.cpp  test_myvas_system.cpp  test_std_system.cpp
tests/cmake/: Catch2.cmake  GTest.cmake  TestUtils.cmake  catch2_utils.cmake  googletest.cmake  gtest_utils.cmake
tests/src/: test_myvas_cmdout.cpp  test_myvas_system.cpp  test_std_system.cpp  test_std_system_out.cpp
